--- a/Templates/form.html
+++ b/Templates/form.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visiblity Prediction</title>
-    <link rel="shortcut icon" href="#" >
+      <link rel="shortcut icon" href="favicon/favicon.ico">
+    <link rel="icon" type="image/gif" href="favicon/animated_favicon1.gif">
     <link rel="stylesheet" href="..//static//css//style.css">
 </head>
 <body>
