--- a/templates/form.html
+++ b/templates/form.html
@@ -7,7 +7,7 @@
     <title>Visiblity Prediction</title>
     <link rel="shortcut icon" href="favicon/favicon.ico">
     <link rel="icon" type="image/gif" href="favicon/animated_favicon1.gif">
-    <link rel="stylesheet" href="..//static//css//style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 
 </head>
 <body>
